feat: 实现普通商品更新功能
