# api/backend/docs/swagger.yaml
@@ -140,6 +140,10 @@ definitions:
         items:
           $ref: '#/definitions/domain.ProductAttrRelation'
         type: array
+      category:
+        allOf:
+        - $ref: '#/definitions/domain.Category'
+        description: 分类
       category_id:
         description: 基础信息
         type: string
@@ -1086,6 +1090,110 @@ definitions:
     - name
     - type
     type: object
+  types.ProductUpdateReq:
+    properties:
+      add_sale_quantity:
+        description: 加售份数（必选）
+        minimum: 1
+        type: integer
+      attr_relations:
+        description: 商品口味做法关联列表（可选）
+        items:
+          $ref: '#/definitions/types.ProductAttrRelationReq'
+        type: array
+      category_id:
+        description: 分类ID（必选）
+        type: string
+      description:
+        description: 菜品描述（可选）
+        type: string
+      detail_images:
+        description: 详情图片（可选，多张）
+        items:
+          type: string
+        type: array
+      effective_date_type:
+        allOf:
+        - $ref: '#/definitions/domain.EffectiveDateType'
+        description: 生效日期类型（可选）
+      effective_end_time:
+        description: 生效结束时间（可选）
+        type: string
+      effective_start_time:
+        description: 生效开始时间（可选）
+        type: string
+      inherit_stall:
+        description: 是否继承原出品部门（必选）
+        type: boolean
+      inherit_tax_rate:
+        description: 其他信息
+        type: boolean
+      main_image:
+        description: 展示信息
+        type: string
+      menu_id:
+        description: 菜单ID（可选）
+        type: string
+      min_sale_quantity:
+        description: 起售份数（必选）
+        minimum: 1
+        type: integer
+      mnemonic:
+        description: 助记词（可选）
+        type: string
+      name:
+        description: 基础信息
+        maxLength: 255
+        type: string
+      sale_channels:
+        description: 售卖渠道（可选，可多选）
+        items:
+          $ref: '#/definitions/domain.SaleChannel'
+        type: array
+      sale_status:
+        allOf:
+        - $ref: '#/definitions/domain.ProductSaleStatus'
+        description: 售卖信息
+        enum:
+        - on_sale
+        - off_sale
+      shelf_life:
+        description: 保质期（可选，单位：天）
+        type: integer
+      spec_relations:
+        description: 关联信息
+        items:
+          $ref: '#/definitions/types.ProductSpecRelationReq'
+        minItems: 1
+        type: array
+      stall_id:
+        description: 指定出品部门ID（可选）
+        type: string
+      support_types:
+        description: 支持类型（可选，堂食、外带）
+        items:
+          $ref: '#/definitions/domain.ProductSupportType'
+        type: array
+      tag_ids:
+        description: 商品标签ID列表（可选）
+        items:
+          type: string
+        type: array
+      tax_rate_id:
+        description: 指定税率ID（可选）
+        type: string
+      unit_id:
+        description: 属性关联
+        type: string
+    required:
+    - add_sale_quantity
+    - category_id
+    - min_sale_quantity
+    - name
+    - sale_status
+    - spec_relations
+    - unit_id
+    type: object
   types.SetMealCreateReq:
     properties:
       add_sale_quantity:
@@ -1363,6 +1471,28 @@ paths:
       security:
       - BearerAuth: []
       summary: 创建普通商品
+      tags:
+      - 商品管理
+  /product/{id}:
+    put:
+      parameters:
+      - description: 商品ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: 请求信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/types.ProductUpdateReq'
+      responses:
+        "200":
+          description: OK
+      security:
+      - BearerAuth: []
+      summary: 更新普通商品
       tags:
       - 商品管理
   /product/attr:
